# Homeworkc-c-

./: CMakeLists.txt
data/: films.txt
lib/parallel/: CMakeLists.txt
lib/parallel/include/: paralel.h
lib/parallel/src/: paralel.c
lib/reader/: CMakeLists.txt
lib/reader/include/: parser.h
lib/serial/: CMakeLists.txt
lib/serial/include/: serial.h
lib/serial/src/: serial.c
src/: main.c
